--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -22,7 +22,7 @@
             console.log('in updateCard');
             $.ajax({
                 'type':'GET',
-                'url':'/chat/cardList',
+                'url':'/chatrooms/cardList',
                 //'cache':false,
                 'data':{tag:tag},
                 'async': false,
@@ -32,7 +32,7 @@
                         var cardList = json['data'];
                         console.log('cardList :', cardList);
 
-                        var table = $('<table/>').appendTo($('#showCard'));
+                        var table = $('<table/>').appendTo($('#cardView'));
                         $.each(cardList,function(i, card){
                             var temp = JSON.parse(card);    //string을 object로 바꿈
                             $('<tr/>').appendTo(table)
@@ -53,7 +53,7 @@
 <%- include('header')%>
 <div class="container">
 
-    <div class="postContainer">
+    <div class="postContainer" id="cardView">
 
     </div>
     <div class="chatContainer">
