--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -6,6 +6,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="/stylesheets/chatroom.css" />
     <script src="/javascripts/getChatServerUrl.js" ></script>
+    <script src="/javascripts/getCookie.js"></script>
+    <script src="/javascripts/createPostObjToHtml.js" ></script>
     <script src="/javascripts/jquery.cookie.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
@@ -18,8 +20,10 @@
         $(document).ready(function(){
             var tag = $.cookie('tagName');
             console.log('get cookie name : ', tag);
+            document.cookie = tag +'CardCnt='+ 0 + ';path=/';
 
             console.log('in updateCard');
+            // 태그방에 대한 포스트 불러오기
             $.ajax({
                 'type':'GET',
                 'url':'/chatrooms/cardList',
@@ -29,18 +33,16 @@
                 'datatype':'json',
                 'success': function(json){
                     if(json['success']===true){
-                        var cardList = json['data'];
-                        console.log('cardList :', cardList);
-
-                        var table = $('<table/>').appendTo($('#cardView'));
-                        $.each(cardList,function(i, card){
-                            var temp = JSON.parse(card);    //string을 object로 바꿈
-                            $('<tr/>').appendTo(table)
-                                .append($('<td/>').text(temp.title))
-                                .append($('<td/>').text(temp.content))
-                                .prepend(src=temp.photo_path);  //이미지는 테스트 해봐야함!
-
-                        });
+                        var data = json.data;
+                        console.log(data);
+                        data.forEach(function(v, i){
+                            console.log(JSON.parse(v))
+                            var post = createPostObjToHtml(JSON.parse(v));
+                            document.getElementById('cardView').appendChild(post);
+                            // if(i === (data.length -1)){
+                            //     document.cookie = tag +'CardCnt='+ (parseInt(skip) + response.data.data.length) + ';path=/';
+                            // }
+                        })
                     }
                 }
             });
