--- a/views/login.ejs
+++ b/views/login.ejs
@@ -59,9 +59,9 @@
 
                                     'type' : 'GET',
                                     'url' : '/auth/facebook',
-                                    'headers': {
-                                        'Content-Type':'application/x-www-from-urlencoded'
-                                    },
+                                    // 'headers': {
+                                    //     'Content-Type':'application/x-www-from-urlencoded'
+                                    // },
                                     'success' : function(json){
                                         if(json['success'] === true){
                                             alert('로그인 완료!!');
@@ -81,9 +81,9 @@
 
                                     'type' : 'GET',
                                     'url' : '/auth/google',
-                                    'headers': {
-                                        'Content-Type':'application/x-www-from-urlencoded'
-                                    },
+                                    // 'headers': {
+                                    //     'Content-Type':'application/x-www-from-urlencoded'
+                                    // },
                                     'success' : function(json){
                                         if(json['success'] === true){
                                             alert('로그인 완료!!');
