--- a/views/login.ejs
+++ b/views/login.ejs
@@ -60,7 +60,8 @@
                                     'type' : 'GET',
                                     'url' : '/auth/facebook',
                                     'headers': {
-                                        'Content-Type':'application/x-www-from-urlencoded'
+                                        'Content-Type':'application/x-www-from-urlencoded',
+                                        'Access-Control-Allow-Origin':'http://192.168.0.15'
                                     },
                                     'success' : function(json){
                                         if(json['success'] === true){
@@ -82,7 +83,8 @@
                                     'type' : 'GET',
                                     'url' : '/auth/google',
                                     'headers': {
-                                        'Content-Type':'application/x-www-from-urlencoded'
+                                        'Content-Type':'application/x-www-from-urlencoded',
+                                        'Access-Control-Allow-Origin':'http://192.168.0.15'
                                     },
                                     'success' : function(json){
                                         if(json['success'] === true){
