--- a/views/editCard.ejs
+++ b/views/editCard.ejs
@@ -32,6 +32,7 @@
         <script type="text/javascript">
             function editCardPost(){
                 submitUrlHandler("frm_editPost", "post", "/users/card", null);
+                window.close();
             }
         </script>
 
