[Fix] Fix editCard after submit, webbrowser views json and Add chatroom's editCard function

--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title><%= title %></title>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js" ></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="/js/jquery.form.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="/stylesheets/chatroom.css" />
     <script src="/javascripts/getChatServerUrl.js" ></script>
@@ -15,15 +16,9 @@
         })
     </script>
 
-    <!-- 채팅룸에 뿌려줄 포스팅 -->
-    <script>
-        $(document).ready(function(){
+    <script type="text/javascript">
+        function getCardList() {
             var tag = $.cookie('tagName');
-            console.log('get cookie name : ', tag);
-            document.cookie = tag +'CardCnt='+ 0 + ';path=/';
-
-            console.log('in updateCard');
-            // 태그방에 대한 포스트 불러오기
             $.ajax({
                 'type':'GET',
                 'url':'/chatrooms/cardList',
@@ -34,18 +29,21 @@
                 'success': function(json){
                     if(json['success']===true){
                         var data = json.data;
-                        console.log(data);
                         data.forEach(function(v, i){
-                            console.log(JSON.parse(v))
                             var post = createPostObjToHtml(JSON.parse(v));
                             document.getElementById('cardView').appendChild(post);
-                            // if(i === (data.length -1)){
-                            //     document.cookie = tag +'CardCnt='+ (parseInt(skip) + response.data.data.length) + ';path=/';
-                            // }
                         })
                     }
                 }
             });
+        }
+    </script>
+
+    <!-- 채팅룸에 뿌려줄 포스팅 -->
+    <script>
+        $(document).ready(function(){
+            // 태그방에 대한 포스트 불러오기
+            getCardList();
             // setTimeout(); //주기적으로 업데이트 하기 위해
         });
     </script>
@@ -55,7 +53,7 @@
 <%- include('header')%>
 <div class="container">
 
-    <div class="postContainer" id="cardView">
+    <div class="postContainer" id="cardView" style="overflow: auto;">
         <div class="anc_Posting">
             <button onclick="writePost()" class="btn_posting">
                 포스팅하기
@@ -65,7 +63,14 @@
     <script>
         <%if (typeof uid != 'undefined') {%>
         function writePost(){
-            window.open('/users/userProfile/<%=uid%>/editCard', null, "width = 600, height = 600, location=no, resizable=no")
+            var childWindow = window.open('/users/userProfile/<%=uid%>/editCard', null, "width = 600, height = 600, location=no, resizable=no");
+            var isChildClose = setInterval(function() {
+                if(childWindow == null || childWindow.closed){
+                    $('.postItem').remove();
+                    getCardList();
+                    window.clearInterval(isChildClose);
+                }
+            }, 500)
         }
         <%} else { %>
         function writePost(){
