--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js" ></script>
 </head>
-<body>
+<body style="overflow: scroll">
 <script>
     $(window).ready(function(){
         getMyPostRange(0);
